--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: master
+    branches: master1
   pull_request:
-    branches: master
+    branches: master1
 
 jobs:
   build:
